--- a/_data/figures.yml
+++ b/_data/figures.yml
@@ -1,5 +1,19 @@
-- filename: stock1.JPG
-  caption: Random Caption 1 
+- filename: model.svg
+  caption: |
+    *QPMeL* Classical Head Architecture. Our angle prediction layer learns independent $$\theta$$ and $$\gamma$$ from the features of the CNN Backbone. The sigmoid activation and $$2\pi$$ multiplication are used to match the period of rotation in a qubit. Quantum Residual Correction is then applied for inference.
 
-- filename: stock2.JPG
-  caption: Random Caption 2 with **bold** text 
+- filename: inference_circ.svg
+  caption: |
+    Encoding (Inference) Circuit for *QPMeL* that encodes images based on inputs from the classical head.
+
+- filename: training_circ.svg
+  caption: |
+    Training Circuit. The green boxes - encoding circuit. The yellow box - SWAP Test implementation. The comparison is either a +ve or -ve sample
+
+- filename: MSEHeat.svg
+  caption: |
+    All Pair heatmaps in Euclidean space: (a) and (c) have the same model architecture but show large differences in separatability. (b) shows perfect separatability but via an unbounded upper limit as seen by the magnitude of values.
+
+- filename: HilbertHeat.svg
+  caption: |
+    All Pair heatmaps in Hilbert Space: (a) shows our model fully trained with residuals, with perfect separation and large differences. (b). shows the same model trained without residuals with multiple outliers. (c). only creates binary separation for the digit 9 (d). shows a modified version of the QMeL model with perfect separation but smaller differences between +ve and -ve classes.
