--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@
   position: MS in CS
   organization: Arizona State University
   sub_organization: School of Computing and Augmented Intelligence
-  website: vinayak19th.github.io
+  website: https://vinayak19th.github.io/
   primary: true
 
 - name: Aviral Shrivastava
