Updated Google Scholar

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,6 +5,7 @@
   position: MS in CS
   organization: Arizona State University
   sub_organization: School of Computing and Augmented Intelligence
+  google_scholar: https://scholar.google.com/citations?user=r763skMAAAAJ&hl=en
   website: https://vinayak19th.github.io/
   primary: true
 
