Added author info

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,10 +2,11 @@
   github: vinayak19th
   linkedin: vinayak19th
   email: vsharm87@asu.edu
-  position: MS in CS
+  position: PhD in CS
   organization: Arizona State University
   sub_organization: School of Computing and Augmented Intelligence
   google_scholar: https://scholar.google.com/citations?user=r763skMAAAAJ&hl=en
+  orcid: https://orcid.org/0009-0009-5633-4003  
   website: https://vinayak19th.github.io/
   primary: true
 
@@ -15,5 +16,6 @@
   position: Member
   organization: IEEE
   github: aviralshri
+  orcid: https://orcid.org/0000-0002-1075-897X
   website: https://labs.engineering.asu.edu/mps-lab/person/aviral-shrivastava/
   google_scholar: https://scholar.google.com/citations?user=zlzK-v0AAAAJ&hl=en
