Clear organization fields in configuration
Removed organization and sub-organization details.

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # Personal info
 paper_name: "QPMeL - Quantum-Aware Classically-Trained Embeddings via Projective Metric Learning"
 preprint : True
-organization: Arizona State University 
-sub_organization: School of Computing and Augmented Intelligence 
+organization: ""
+sub_organization: ""
 
 
 ######################## Paper Resources ########################################
