Uncomment presentation link in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ paper_pdf: https://dl.acm.org/doi/pdf/10.1145/3358198
 code: https://github.com/MPSLab-ASU/Project_Page_Template
 arXiv : https://arxiv.org/abs/1512.01274
 IEEE: https://ieeexplore.ieee.org/document/9187262
-# presentation: assets/presentation.pptx
+presentation: assets/presentation.pptx
 # Additional icon links
 
 favicon: assets/images/MPS_Lab.ico
